--- a/index.html
+++ b/index.html
@@ -47,8 +47,24 @@
             <button type="button" class="btn-9"></button>
         </div>
     </div>
-    <div class="start">
-        <button type="button" class="startGame startGame_hover startGame_active">Start The Game!</button>
+    <div class="sideBar">
+        <div class="start">
+            <button type="button" class="startGame startGame_hover startGame_active">Start The Game!</button>
+        </div>
+        <div class="botSwitch">
+            <p class="toggleText">Bot</p>
+            <div class="toggle-switch">
+                <input class="toggle-input" id="toggle" type="checkbox" name="toggleBot">
+                <label class="toggle-label" for="toggle"></label>
+            </div>
+        </div>
+        <div class="timerSelectors">
+            <p class="toggleText">Time</p>
+            <button class="5s">5</button>
+            <button class="8s">8</button>
+            <button class="13s">13</button>
+            <button class="20s">20</button>
+        </div>
     </div>
     <div class="reset">
         <p id="whoWon">XXX WON!</p>
